# bible-grammar-stats

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  docs_hooks.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-notebooks.txt  requirements.txt  setup.cfg
.claude/commands/: christological-titles.md  collocations.md  divine-names.md  domain-search.md  export.md  genre-compare.md  hiphil.md  intertextuality.md  lesson.md  lint.md  lxx-consistency.md  lxx-query.md  morph-chart.md  nugget.md  object-search.md  ot-speaker.md  phrase-search.md  poetry.md  role-search.md  semantic-profile.md  synonym.md  term-map.md  trajectory.md  verbal-syntax.md  vocab.md  word-study.md
.github/workflows/: deploy-site.yml
binder/: postBuild  requirements.txt
docs/: features.md  getting-started.md
mkdocs_src/: about-the-logo.md  index.md
mkdocs_src/javascripts/: home-link.js
mkdocs_src/lessons/aramaic/: index.md
mkdocs_src/lessons/greek/: index.md
mkdocs_src/lessons/hebrew/: index.md
mkdocs_src/notebooks/: index.md
mkdocs_src/reference/: features.md  index.md
mkdocs_src/stylesheets/: extra.css
notebooks/: 01_data_exploration.ipynb  02_query_demo.ipynb  03_statistics.ipynb  04_nt_quotations.ipynb  05_concordance.ipynb  06_book_profiles.ipynb  07_word_study.ipynb  08_parallel_passage.ipynb  09_language_analysis.ipynb  10_advanced_analysis.ipynb  11_syntax_and_roles.ipynb  12_hiphil_morphology.ipynb  README.md  SETUP.md
notebooks/both/intertextuality/: 04_nt_quotations.ipynb  08_parallel_passage.ipynb  lxx_analysis.ipynb  nt_quotations.ipynb  theological_trajectories.ipynb
notebooks/both/lexicon/: 05_concordance.ipynb  07_word_study.ipynb  09_language_analysis.ipynb  formulaic_language.ipynb
notebooks/both/survey/: 01_data_exploration.ipynb  02_query_demo.ipynb  10_advanced_analysis.ipynb
notebooks/tutorial/: getting_started.ipynb
output/lessons/: README.md
output/nuggets/: hiphil-strong-nuggets.md
output/reports/: README.md  christological-titles.md  divine-names-report.md  hiphil_report.md  isa-53-intertextuality.csv  isa-intertextuality.csv  role-yhwh-elohim-ot.md
overrides/: home.html
plans/: learning-new-stem.md  learning-qal-strong-conjugation.md  learning-qal-weak-conjugation.md  learning-weak-stem.md
reports/: 2fp-perfect-verbs.md  README.md  greek-aorist-passives-by-nt-book.md  greek-nt-tense-voice-heatmap.md  greek-pauline-tense-voice-heatmap.md  hapax-legomena-by-book.md  hebrew-verb-stems-genesis.md  hebrew-verb-stems-ot-total.md  hebrew-verb-stems-torah-by-book.md  niphal-perfects-by-book-top20.md  niphal-perfects-by-book.md  nouns-by-gender-by-book.md  nt-case-distribution-by-book.md  ot-hebrew-aramaic-by-book.md  ot-verb-stems-pie.md  verb-morphology-by-book.md
reports/profiles/: Dan_profile.md  Gen_profile.md  Isa_profile.md  Psa_profile.md  Rev_profile.md  Rom_profile.md
scripts/: build_db.py  build_epi_to_auto.py  build_fasting_report.py  build_mkdocs.py  build_qeren_report.py  build_student_packs.py  build_word_alignment.py
site/: index.html
src/bible_grammar/: __init__.py  _stem_analysis.py  _utils.py  alignment.py  aramaic_nominal.py  aramaic_profile.py  christological_titles.py  collocation.py  concordance.py  db.py  divine_names.py  domain_search.py  exercise_pdf.py  export.py  formulaic.py  genre_compare.py  greek_prepositions.py  hapax.py  hiphil.py  hithpael.py  ibm_align.py  information_structure.py  ingest.py  intertextuality.py  lexicon.py  lxx.py  lxx_consistency.py  lxx_query.py  morph_chart.py  morphology.py  niphal.py  nt_coreference.py  nt_discourse.py  nt_louw_nida.py  nt_moods.py  nt_noun_profile.py  nt_participles.py  nt_verb_profile.py  ot_discourse.py  ot_noun_profile.py  (+30 more)
tests/integration/: test_data.py
tests/unit/: test_morphology.py  test_phrase.py  test_poetry.py  test_reference.py  test_stats.py  test_stem_analysis.py  test_verbal_syntax.py
(+1506 files in other folders)
