[metadata]
name = berean-bible-bots
version = 0.1.0

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
max-line-length = 120
# __init__.py contains intentional re-exports — F401 is expected there
# exercise_pdf.py contains embedded Hebrew exercise data as long string literals
per-file-ignores =
    src/bible_grammar/__init__.py: F401,E128
    src/bible_grammar/verbal_syntax/__init__.py: F401
    src/bible_grammar/exercise_pdf/__init__.py: F401
    src/bible_grammar/exercise_pdf.py: E501,E221,E127,E128
    # Verb stem modules use aligned dict literals for paradigm data — E221 is intentional
    src/bible_grammar/stems/qal.py: E221,E501
    src/bible_grammar/stems/niphal.py: E221,E501
    src/bible_grammar/stems/hiphil.py: E221,E501
    src/bible_grammar/stems/hophal.py: E221,E501
    src/bible_grammar/stems/piel.py: E221,E501
    src/bible_grammar/stems/pual.py: E221,E501
    src/bible_grammar/stems/hithpael.py: E221,E501
    src/bible_grammar/ot/aramaic_nominal.py: E221
    # NT/OT analysis modules with aligned display data
    src/bible_grammar/nt/nt_demonstratives.py: E221
    src/bible_grammar/nt/nt_noun_profile.py: E221
    src/bible_grammar/nt/nt_verb_profile.py: E221
    src/bible_grammar/ot/ot_discourse.py: E221
    src/bible_grammar/ot/ot_noun_profile.py: E221
    src/bible_grammar/ot/ot_numbers.py: E221
    src/bible_grammar/ot/ot_semantic_domains.py: E221,E231,E501
    # exercise_pdf modules contain dense biblical language data tuples
    src/bible_grammar/exercise_pdf/_base.py: E221,E127,E128,E501
    src/bible_grammar/exercise_pdf/bba.py: E221,E231,E501,E127,E128
    src/bible_grammar/exercise_pdf/bbg.py: E221,E231,E501,E127,E128
    src/bible_grammar/exercise_pdf/bbh.py: E221,E231,E501,E127,E128,E228

[mypy]
ignore_missing_imports = True
warn_unused_ignores = True
warn_return_any = False
disallow_untyped_defs = True
check_untyped_defs = True
